--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <!-- Add the links for Skills, Projects and Recommendation here -->
           <a class="topmenu" href="#skills">Skills</a>
           <a class="topmenu" href="#projects">Projects</a>
-          <a class="topmenu" href="#Recommendation">Recommendation</a>
+          <a class="topmenu" href="#recommendations">Recommendation</a>
 
 
 
